--- a/docs/_bibliography/publications.bib
+++ b/docs/_bibliography/publications.bib
@@ -3,6 +3,14 @@
 References
 ==========
 
+@phdthesis{phdthesis,
+  author       = {Aloïs Castellano},
+  title        = {Étude des effets de la température sur les combustibles nucléaires par une approche ab initio},
+  school       = {Sorbonne université},
+  year         = {2022},
+  month        = {1}
+}
+
 @article{Chaney2021,
   doi = {10.1103/physrevmaterials.5.035004},
   url = {https://doi.org/10.1103/physrevmaterials.5.035004},
@@ -42,12 +50,4 @@ References
   author = {Aloïs Castellano and Fran{\c{c}}ois Bottin and Johann Bouchet and Antoine Levitt and Gabriel Stoltz},
   title = {$\textit{Ab-initio}$ canonical sampling based on variational inference},
   journal = {Phys. Rev. B}
-}
-
-@phdthesis{phdthesis,
-  author       = {Aloïs Castellano},
-  title        = {Étude des effets de la température sur les combustibles nucléaires par une approche ab initio},
-  school       = {Sorbonne université},
-  year         = 2022,
-  month        = 1,
 }
